--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body{
 }
 
 .container {
+    display: block;
     max-width: 80%;
     margin: auto;
     padding-top: 8rem;
@@ -85,6 +86,12 @@ body{
     grid-template-columns: 1fr 1fr;
 }
 
+.flexible{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 a{  
     color: rgba(255, 255, 255, 0.5);   
     line-height: 1.8;
@@ -96,7 +103,7 @@ a{
 }
 
 .pre{
-    font-size: 21px;
+    font-size: 18px;
     line-height: 3;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.8);
@@ -104,12 +111,6 @@ a{
     text-align: justify;
     padding: 10px;
     font-family: 'Allerta', sans-serif;
-}
-
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 footer{
@@ -123,10 +124,14 @@ footer{
     padding: 5px;
 }
 
+p i {
+    margin-right: 0.5rem;
+}
+
 @media screen and (max-width: 1024px){
 
     .pre{
-        font-size: 18px;
+        font-size: 17px;
         padding: 0;
     }
 }
