--- a/style.css
+++ b/style.css
@@ -52,10 +52,10 @@ nav{
     text-decoration: none;
     color: whitesmoke;
     text-transform: uppercase;
-    font-size: 0.65rem;
+    font-size: 0.68rem;
     padding: 8px 12px;
     margin-left: 18px;
-    border: 1px solid darkgoldenrod;
+    border: 1px solid rgba(184, 135, 11, 0.5);
     border-radius: 0.35rem;
     float: right;
 }
@@ -74,7 +74,6 @@ nav{
     margin: 0;
     font-size: 5rem;
 }
-
 
 .text{
     font-size: 16px;
@@ -104,18 +103,18 @@ nav{
 .container1 {
     max-width: 80%;
     margin: auto;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
+    padding-top: 4.5rem;
+    padding-bottom: 2rem;
 }
 
 .diagonal{
-    -webkit-transform: skewY(5deg);
-    transform: skewY(5deg);
+    -webkit-transform: skewY(-2deg);
+    transform: skewY(-2deg);
 }
 
 .recto{
-    -webkit-transform: skewY(-5deg);
-    transform: skewY(-5deg);
+    -webkit-transform: skewY(2deg);
+    transform: skewY(2deg);
 }
 
 .grid-3 {
@@ -148,14 +147,15 @@ a{
 }
 
 #pre{
-    font-size: 18px;
+    font-size: 21px;
     line-height: 2.5;
     font-weight: bold;
     color: rgba(0, 0, 0, 0.8);
     text-transform: uppercase;
     text-align: justify;
     /* padding: 10px; */
-    font-family: 'Allerta', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    /* font-family: 'Allerta', sans-serif; */
 }
 
 footer{
@@ -181,12 +181,29 @@ p i{
 }
 
 .grid-2 h3{
-    font-size: 6rem;
+    font-size: 2rem;
 }
 
-.grid-2 p{
+.grid-2 .text{
     font-size: 0.912rem;
     line-height: 1.7;
+}
+
+.grid-2 div a{
+    padding: 8px 12px;
+    text-decoration: none;
+    border: 1px solid whitesmoke;
+    border-radius: 0.25rem;
+    color: whitesmoke;
+    font-size: 20px;
+}
+
+.grid-2 .flexible a{
+    border: none;
+}
+
+.grid-2 .flexible h3{
+    font-size: 1rem;
 }
 
 /* ------------------------------------- RESPONSIVE ---------------------------------------------- */
@@ -202,12 +219,8 @@ p i{
         font-size: 4rem
     }
 
-    .grid-2 h3{
-        font-size: 4.9rem;
-    }
-
-    .grid-2 p {
-        font-size: 0.851rem;
+    .grid-2 .text{
+        font-size: 0.75rem;
         line-height: 1.6;
     }
 }
@@ -229,13 +242,14 @@ p i{
         font-size: 3rem
     }
 
-    .grid-2 p {
-        font-size: 0.776rem;
+    .grid-2 .text{
+        font-size: 0.7rem;
         line-height: 1.6;
     }
 
-    .grid-2 h3{
-        font-size: 3.7rem;
+    .nav-bar a{
+        font-size: 0.5rem;
+        padding: 6px 10px;
     }
 }
 
@@ -274,15 +288,10 @@ p i{
         font-size: 3rem
     }
 
-    .grid-2 p {
-        font-size: 0.7735rem;
+    .grid-2 .text{
         line-height: 1.6;
     }
-
-    .grid-2 h3{
-        font-size: 3.7rem;
-    }
-
+    
     nav{
         display: none;
     }
@@ -316,13 +325,9 @@ p i{
         font-size: 0.76rem;
     }
 
-    .grid-2 p {
+    .grid-2 .text {
         font-size: 0.763rem;
         line-height: 1.6;
-    }
-
-    .grid-2 h3{
-        font-size: 3.2rem;
     }
 
     nav{
@@ -341,20 +346,30 @@ p i{
         font-size: 0.9090rem;
     }
 
-    .header::after{
-        height: 80vh;
+    .header-content{
+        top: 30%;
     }
 
-    .grid-2 p{
-        font-size: 0.763rem;
+    
+    .header::after{
+        height: 90vh;
+    }
+
+    .grid-2 .text{
+        font-size: 0.88rem;
         line-height: 1.6;
     }
 
-    .grid-2 h3{
-        font-size: 3.5rem;
+    nav{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        width: 115%;
     }
 
-    nav{
-        display: none;
+    #pre{
+        font-size: 20px;
+        padding: 0;
     }
 }
